user/themes/docs-subutai/css/custom.css
/*
===============================================================================================================================
Put your custom CSS in this file.
===============================================================================================================================
*/

/* CSS to hide sidebar numbering (uncomment to enable) */
/*
#sidebar ul.topics > li > a b
{
    visibility: hidden;
}
*/

/* CSS to hide clipboard icon (uncomment to enable) */
/*
.copy-to-clipboard {
    display:none;
}
*/

.scrollTable {
    max-width: 100%;
    overflow: auto;
    white-space: nowrap;
}
.scrollTable::before {
    content: "\2190 \00a0 \00a0 scroll \00a0 \2192";
    position: absolute;
    left: 50%;
    margin-left: -50px;
    text-align: center;
    color: #078DD0;
    opacity: .5;
    font-weight: 600;
}
.scrollTable table {
    margin-top: 35px;
    min-width: 700px;
    display: inline-block;
    white-space: normal;
}
.scrollTable thead th {
    text-align: center;
}
.scrollTable table th, .scrollTable table td {
    width: 25%;
    box-sizing: border-box;
}
.scrollTable tr td {
    text-align: center;
}
.scrollTable tr td:first-child {
    text-align: left;
}
.scrollTable tr td {
    text-align: center;
}
/*  */
/* .responsiveTable ul {
    display: flex;
    padding: 0;
    flex-direction: column;
}
.responsiveTable>ul {
    border: 1px solid #eaeaea;
}
.responsiveTable ul li {
    height: 100%;
    text-align: center;
    list-style: none;
    margin: 0;
}
.responsiveTable>ul>li>strong>a,
.responsiveTable>ul>li>a {
    display: block;
    padding: .5rem 0;
}
.responsiveTable>ul>li {
    background: #F7F7F7;
}
.responsiveTable ul li ul {
    background: #FFF;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
}
.responsiveTable ul li ul li {
    border: 0.5px solid #eaeaea;
} */

body {
    letter-spacing: normal;
}
/* text font size */
body p {
    font-size: 1.2rem;
}

/* title */
@font-face {
    font-family: MavenPro;
    src: url(../fonts/MavenPro-Regular.ttf);
}

h1, h2, h3, h4, h5, h6 {
    font-family: MavenPro;
}
a {
    color: #078DD0;
}
a:active, a:hover, #body-inner a:hover {
    color: #04346E;
    text-decoration: none;
}

/* anchor links */
h3>a {
    display: block;
    padding-top: 80px;
    margin-top: -80px;
}

#body-inner {
    padding-top: 5rem;
}

/* top bar - menu */
#topMenu {
    position: fixed;
    width: 100%;
    height: 65px;
    /* padding: 0 65px; */
    background: #000;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    z-index: 1;
}
/* .topNav {
    overflow: hidden;
} */
.topNav.responsive {
    position: relative;
}
/* .topNav .menuList .menuItem {
    display: none;
}
.topNav.responsive .menuList .menuItem {
    display: block;
} */
.topNav .menuList {
    display: none;
}
.topNav.responsive .menuList {
    display: block;
    position: absolute;
    top: 65px;
    left: 0;
    width: 100%;
    overflow: auto;
}
.mainLogo {
    height: 100%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}
.iconBar {
    height: 100%;
    display: flex;
    align-items: center;
    padding-right: 16px;
}
.iconBar a {
    color: #FFF;
    font-size: 1.85rem;
}
/* #topMenu .menuList .menuItem {
    display: none;
} */
/* .mobileMenu-icon {
    padding-right: 16px;
    height: 100%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}
.mobileMenu-icon i {
    color: #FFF;
    font-size: 1.85rem;
} */
.menuList {
    background: #000;
    height: auto;
    /* width: 100%; */
    margin: 0;
    padding: 0;
    /* display: none; */
    /* display: flex;
    flex-wrap: wrap;
    flex-direction: column; */
}
.menuList li {
    width: fit-content;
    list-style: none;
    font-size: 16px;
    padding: 0 10px;
}
.menuList li a, .dropdown-menu li a {
    color: #FFF;
}
.menuList li a:hover, .dropdown-menu li a:hover {
    color: #078DD0;
}
/* dropdown items */
.dropdown-menu {
    z-index: 999;
    padding: 0 25px 10px 0;
    /* margin-left: -40px; */
    position: absolute;
    display: none;
    background: #282828;
    width: 100%;
}
.dropdown:hover .dropdown-menu {
    display: block;
}
.dropdown-menu li {
    padding-left: 20px;
}
/* chapter */
#chapter {
    padding-top: 0;
}
/* body navigation  */
#body .nav {
    top: 65px;
}
/* sidebar */
#sidebar {
    top: 65px;
}
/* header */
#header {
    width: 100%;
    background: #078DD0;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-justify-content: center;
    justify-content: center;
}
#logo {
    margin: 20px 0;
    width: 50%;
}
/* images position */
/* left and right */
.image-left, #body .image-left,
.image-right, #body .image-right {
    max-width: 100%;
    float: none;
    box-sizing: border-box;
    margin: 0;
    margin-top: 0;
    margin-bottom: 0;
}

/********** SIDEBAR **********/
/* search */
.tntsearch-form {
    margin-top: 60px;
}
.homeLink {
    width: 100%;
    text-align: center;
    margin-top: 80px;
}
.homeLink a {
    color: #555;
}
.homeLink i {
    font-size: 2rem;
}
.homeLink i:last-child {
    font-size: .9rem;
}
.homeLink a:hover, .homeLink a:hover {
    color: #078DD0;
}
#sidebar .advancedSearch {
    color: #FFF;
    margin-top: 10px;
}
#sidebar .advancedSearch:hover {
    font-weight: 700;
}
a#sidebar-toggle {
    font-family: MavenPro;
    font-weight: 600;
    margin-top: 80px;
    line-height: 1;
}
/* menu */
.dd-item {
    font-family: MavenPro;
}
#sidebar ul.topics>li>a {
    font-size: 1.4rem;
}

/* logo*/
.logoTxt {
    width: 100%;
}
/* page title */
h1, #chapter h1, #chapter2 h1 {
    /* margin-bottom: 10px; */
    border-bottom: none !important;
    letter-spacing: -1px;
}
.titleDivider {
    border-bottom: 4px solid #F0F2F4;
    width: 40%;
    margin: 0 auto;
}
#body h1 + hr {
    margin-top: 0;
}
/* chapters pages */
/* main title home */
/* #chapter h1, .chapter2 h1 {
    font-size: 2.25rem;
} */
h1, #chapter h1 {
    font-size: 3rem;
    margin: 40px 0;
}
h2 {
    font-size: 2.25rem;
    border-bottom: 1px solid #F0F2F4;
}
h3, #chapter h3 {
    font-size: 1.8rem;
    text-align: left;
}
h4 {
    font-size: 1.6rem;
    margin-bottom: .5rem;
}
h5 {
    font-size: 1.35rem;
    margin-bottom: .25rem;
}
h6 {
    font-size: 1.2rem;
    font-weight: bold;
    margin-bottom: .25rem;
}

/* #chapter h2, .chapter2 h2 { */
    /* text-align: center; */
    /* font-size: 1.2rem; */
    /* letter-spacing: unset; */
/* } */
#chapter p, .chapter2 p {
    text-align: left;
}
#chapter ul li {
    line-height: 1.5;
    margin: 40px 0;
    /* display: -webkit-flex;
    display: flex;
    -webkit-align-items: flex-start;
    align-items: flex-start; */
}
#chapter ul li img {
    width: 40px;
    height: auto;
    display: inline-block;
    margin: 0 20px 0 0;
}
.chapter2 ul li a:first-child {
    text-align: center;
    width: 30%;
}
.chapter2 .topics li a:first-child {
    text-align: left;
    width: unset;
}
.chapter2 #chapter ul li a img {
    width: 100%;
    height: 100%;
    margin: 0;
}
.chapter2 ul li a {
    font-size: 1.25rem;
}
.topics li ul li {
    margin: 10px 0;
    font-size: 1rem;
}
.chapter2 ul li ul li ul li a {
    font-size: 1rem;
    font-weight: normal;
}
.topics li:nth-child(2) ul li {
    font-size: 1.25rem;
}
/* chapter prod */
.chapterProd #body-inner p:first-child {
    margin-top: 0;
}
.chapterProd #body img {
    margin-top: 0;
    width: 80px;
    height: auto;
    display: block;
}
/* .topics li ul li ul li { */
#sidebar li ul li ul li {
    margin: 10px 0;
    font-size: 1rem;
}
ul li, ol li {
    margin: 20px 0;
}
.chapter2 #body-inner ul {
    padding-left: 0;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
}
.chapter2 #body-inner ul li {
    width: 50%;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: center;
    justify-content: center;
}
#body-inner h1 img {
    width: 60px;
}

/* copy to clipboard icon */
.copy-to-clipboard {
    /* background-image: url(/documentation/docs-subutai/user/themes/mytheme/images/clippy.svg); */
    background-image: url(/user/themes/docs-subutai/images/clippy.svg);
    height: 26.38px;
    top: -2px;
}
/* .copy-to-clipboard, pre .copy-to-clipboard {
    opacity: .4;
}
.copy-to-clipboard:hover, pre .copy-to-clipboard:hover {
    opacity: 1;
} */

/* @media (min-width: 480px) {

}

@media (min-width: 768px) {

} */

@media (min-width: 992px) {
    .responsiveTable ul {
        flex-direction: row;
    }
}

@media (min-width: 1200px) {
    #topMenu {
        padding: 0 65px;
    }
    .menuList {
        height: 100%;
        flex-direction: row;
    }
    .iconBar {
        display: none;
    }
    #topMenu .menuList .menuItem {
        display: block;
    }
    .menuList li:nth-child(8) {
        padding-right: 0;
    }
    .dropdown-menu {
        padding: 0 25px 10px 25px;
        margin-left: -40px;
        width: auto;
        background: #000;
    }
    .dropdown-menu {
        padding-top: 20px;
        box-sizing: border-box;
    }
    .topNav .menuList {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
    }
    .image-left, #body .image-left {
        max-width: 50%;
        float: left;
        box-sizing: border-box;
        margin-right: 20px;
        margin-top: 0;
        margin-bottom: 0;
    }
    .image-right, #body .image-right {
        max-width: 50%;
        float: right;
        box-sizing: border-box;
        margin-left: 20px;
        margin-top: 0;
        margin-bottom: 0;
    }
    .scrollTable::before {
        display: none;
    }
    /* #chapter {
        padding-top: 2rem;
    } */
}

/* another media querie to opened menu don't break before 1230px */
@media (min-width: 1229px) {
    .menuList li {
        padding: 0 15px;
    }
}

